# KodiMovieScraper

./: .gitignore  README.md  Wiki_Page_Request.py  build_kodi_addon.py  database.py  pyproject.toml  requirements.txt  wikipedia_cache.db
.github/workflows/: tests.yml
Wiki_Page_Request/: Wiki_Page_Request.py  __init__.py
addon/: addon.xml  default.py
database/: __init__.py  database.py
utests/: test_database.py  test_wiki_page_request.py
wiki_page_request/: __init__.py  wiki_page_request.py
