[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "kodi-movie-scraper"
version = "0.1.0"
description = "Small tool to scrape movie information from MediaWiki."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.setuptools]
packages = ["database", "wiki_page_request"]

[tool.pytest.ini_options]
testpaths = ["utests"]

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]

[tool.ruff.lint.per-file-ignores]
"wiki_page_request/wiki_page_request.py" = ["E402"]
"utests/*.py" = ["E402"]
